# BESPOKE

./: .gitignore  LICENSE  README.md  pyproject.toml
bespoke/: cli.py  config.py
bespoke/benchmark/: extract.py  interview.py  prescan.py  reconcile.py
bespoke/capture/: embeddings.py  parsers.py  pipeline.py  web_capture.py
bespoke/db/: init.py  schema.sql
bespoke/serve/: server.py
bespoke/teach/: chunking.py  llm_client.py  prompts.py  stage2a.py  stage2b.py
bespoke/train/: data_prep.py  evaluate.py  train_sft.py
bespoke/trajectory/: report.py
scripts/: com.bespoke.nightly.plist  nightly.sh  verify_setup.py
strategy/: program.md
tests/: conftest.py  test_benchmark_context.py  test_chunking.py  test_cli_pipeline.py  test_data_prep.py  test_evaluate.py  test_evaluate_mlx.py  test_interview.py  test_llm_client.py  test_pipeline.py  test_prescan.py  test_prompts.py  test_search.py  test_stage2a.py  test_train_sft.py  test_web_capture.py
